public/input.css
.vertical-slider {
  width: 100px;
  height: 150px;
  margin-top: 10px;
  writing-mode: bt-lr; /* Bottom-to-top */
  transform: rotate(270deg);
  background-color: #f0f0f0;
}

.horizontal-slider {
  width: 80%;
  margin-top: 10px;
  background-color: #f0f0f0;
}

.slider-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.slider-value {
  margin: 5px 0;
}

.slider-container {
  height: 300px;
  margin: 50px auto;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  appearance: slider-vertical;
  -webkit-appearance: slider-vertical;
}

#tampon {
  width: 100px;
  height: 150px;
  background-color: #93c5e7;
  border-radius: 30px 30px 0px 0px;
  border: 2px solid #000;
  position: relative;
  overflow: hidden;
  cursor: grab;
}

#animated-square {
  width: 100%;
  height: 10%;
  background: #a40e0e;
  position: absolute;
  top: 0;
  left: 0;
  border-radius: 15px 15px 0 0; /* Adjust the border-radius values for the rounded top edges */
  transition: height 0.1s ease; /* Smooth transition for the height change */
  --mask:
  radial-gradient(44.72px at 50% calc(100% - 60.00px),#000 99%,#0000 101%) calc(50% - 40px) 0/80px 100%,
  radial-gradient(44.72px at 50% calc(100% + 40.00px),#0000 99%,#000 101%) 50% calc(100% - 20px)/80px 100% repeat-x;
-webkit-mask: var(--mask);
        mask: var(--mask);
}



/* New code */
#pad {
  height: 300px;
  width: 200px;
  background-image: url('images/pad.png');
  background-size: cover;
  background-repeat: no-repeat;
}

#pad-blood-container {
  clip-path: url(images/pad-trace.svg#padClip);
  -webkit-clip-path: url(images/pad-trace.svg#padClip);
}

#pad-blood {
  margin-left: 8px; /* correct for image misalignment */
  clip-path: ellipse(farthest-side closest-side);
}

